packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/res-003-target-storage.ttrp
// expect: TTRP-RES-003
container c target files { }
